# snowflake_unit_test_demo

./: .env.example  .gitignore  LICENSE  MIGRATION_GUIDE.md  README.md  pyproject.toml
scripts/: demo_workflow.py  deploy_sql_ddl.py  generate_models.py
sql_migrations/: 000_create_schema.sql  001_initial_schema.sql  002_add_product_category.sql
sql_migrations/rollback/: 000_create_schema_rollback.sql  001_initial_schema_rollback.sql  002_add_product_category_rollback.sql
src/db/: local_db.py  metadata_adapter.py  models.py  querier.py  snowflake_test_manager.py
src/legacy/: __init__.py  legacy_analytics.py
src/services/: __init__.py  analytics_service.py
src/utils/: __init__.py  logging.py
tests/: conftest.py  test_business_scenarios.py  test_revenue_by_client.py  test_snowflake_features.py
tests/data/: clients.json  order_lines.json  orders.json  products.json
tests/legacy/: __init__.py  test_legacy_analytics.py
tests/services/: __init__.py  test_analytics_service.py
